--- a/Walmart.ipynb
+++ b/Walmart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "53698ef6",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "0a30bcd6",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ca6a1766",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ca611ca9",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "4  211.350143         8.106  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "40ee555a",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "6434  192.308899         8.667  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "de3216bd",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "(6435, 8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "a45b5d53",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "0183a32b",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "2a413eb0",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c5323512",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "max     227.232807     14.313000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "cc323dd6",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "d5e51ffa",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b2231dea",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "dcb86b26",
    "metadata": {},
    "outputs": [
@@ -649,7 +649,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "102857f8",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "4  05-03-2010"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "70199d0c",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e6d19d94",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3b6b2850",
    "metadata": {},
    "outputs": [
@@ -775,7 +775,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "ca4f2cdb",
    "metadata": {},
    "outputs": [
@@ -938,9 +938,6 @@
        "      <th>Fuel_Price</th>\n",
        "      <th>CPI</th>\n",
        "      <th>Unemployment</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Day</th>\n",
        "      <th>Time_Index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -955,9 +952,6 @@
        "      <td>2.572</td>\n",
        "      <td>211.096358</td>\n",
        "      <td>8.106</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -970,9 +964,6 @@
        "      <td>2.962</td>\n",
        "      <td>126.442065</td>\n",
        "      <td>9.765</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -985,9 +976,6 @@
        "      <td>2.572</td>\n",
        "      <td>209.852966</td>\n",
        "      <td>8.554</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1000,9 +988,6 @@
        "      <td>2.666</td>\n",
        "      <td>126.442065</td>\n",
        "      <td>6.548</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1015,9 +1000,6 @@
        "      <td>2.572</td>\n",
        "      <td>210.752605</td>\n",
        "      <td>8.324</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1032,12 +1014,12 @@
        "3     17 2010-02-05     789036.02             0        23.11       2.666   \n",
        "4     30 2010-02-05     465108.52             0        39.05       2.572   \n",
        "\n",
-       "          CPI  Unemployment  Year  Month  Day  Time_Index  \n",
-       "0  211.096358         8.106  2010      2    5           1  \n",
-       "1  126.442065         9.765  2010      2    5           1  \n",
-       "2  209.852966         8.554  2010      2    5           1  \n",
-       "3  126.442065         6.548  2010      2    5           1  \n",
-       "4  210.752605         8.324  2010      2    5           1  "
+       "          CPI  Unemployment  Time_Index  \n",
+       "0  211.096358         8.106           1  \n",
+       "1  126.442065         9.765           1  \n",
+       "2  209.852966         8.554           1  \n",
+       "3  126.442065         6.548           1  \n",
+       "4  210.752605         8.324           1  "
       ]
      },
      "execution_count": 25,
@@ -1055,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "a5130c6f",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1111,7 @@
        "4 2010-02-05     465108.52           1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "05ba6d96",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1197,7 @@
        "4 2010-03-05  1.041588e+06           5"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "75386525",
    "metadata": {},
    "outputs": [],
@@ -1238,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "6fa537f1",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1339,7 @@
        "[143 rows x 3 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "id": "862d2dd2",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1469,7 @@
        "[6435 rows x 3 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "id": "5852d3d8",
    "metadata": {},
    "outputs": [],
@@ -1510,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "id": "64c14598",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1612,7 @@
        "9 2010-04-09  1.052562e+06          10  1.038400e+06"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "id": "e9c3a1c5",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "id": "09ee8369",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "id": "fe2d59ae",
    "metadata": {},
    "outputs": [],
@@ -1706,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "id": "5bc9a41a",
    "metadata": {},
    "outputs": [
@@ -1730,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "id": "f1d714ea",
    "metadata": {},
    "outputs": [
@@ -1754,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "id": "bdbef4bc",
    "metadata": {},
    "outputs": [
@@ -1784,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "7db3988f",
    "metadata": {},
    "outputs": [],
@@ -1798,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "id": "e632d0fa",
    "metadata": {},
    "outputs": [],
@@ -1811,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "id": "9812c588",
    "metadata": {},
    "outputs": [],
@@ -1824,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 42,
    "id": "c94d75e0",
    "metadata": {},
    "outputs": [],
@@ -1842,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 43,
    "id": "499e7d99",
    "metadata": {},
    "outputs": [],
@@ -1852,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 44,
    "id": "a31e040d",
    "metadata": {},
    "outputs": [],
@@ -1862,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 45,
    "id": "de59cec4",
    "metadata": {},
    "outputs": [],
@@ -1879,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 46,
    "id": "cab25af4",
    "metadata": {},
    "outputs": [],
@@ -1896,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 47,
    "id": "2a632c54",
    "metadata": {},
    "outputs": [],
@@ -1913,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 48,
    "id": "6ac8f275",
    "metadata": {},
    "outputs": [
@@ -1931,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 49,
    "id": "8dddbe37",
    "metadata": {},
    "outputs": [
@@ -2005,7 +1987,7 @@
        "ElasticNet Regression           2.977134e+11  0.027920"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
