--- a/CarPricePredictionAnalysis.ipynb
+++ b/CarPricePredictionAnalysis.ipynb
@@ -1061,13 +1061,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "32730d22",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=15)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=15)s"
    ]
   },
   {
